[gd_scene load_steps=33 format=3 uid="uid://1am415hpj3qv"]

[ext_resource type="Texture2D" uid="uid://co6nm0kn5fkbk" path="res://assets/sprites/knight.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://67ycu5ri5kq7" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="AudioStream" uid="uid://dxmtn064q3tcm" path="res://assets/sounds/jump.wav" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://di8bfqrjmwcmg" path="res://assets/sounds/power_up.wav" id="4_dqkch"]
[ext_resource type="AudioStream" uid="uid://xkedy27cdyhp" path="res://assets/sounds/explosion.wav" id="5_qlg0r"]
[ext_resource type="Texture2D" uid="uid://cfx5ak73hv3r1" path="res://assets/sprites/jumpboots.png" id="7_7cxk3"]
[ext_resource type="AudioStream" uid="uid://dnyql34ilfinw" path="res://assets/sounds/tap.wav" id="7_vjdm5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("1_3vyb7")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("1_3vyb7")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("1_3vyb7")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}],
"loop": true,
"name": &"ducking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fjrip"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7bpjx"]
atlas = ExtResource("7_7cxk3")
region = Rect2(32, 0, 32, 32)

[node name="Player" type="CharacterBody2D"]
z_index = 5
position = Vector2(-6, 0)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(13, -12)
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"idle"
autoplay = "idle"
frame = 3
frame_progress = 0.871685

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(13, -5)
shape = SubResource("CircleShape2D_fjrip")

[node name="JumpAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qhqgy")
volume_db = -10.0

[node name="DuckAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")
bus = &"SFX"

[node name="ExplodeAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qlg0r")
bus = &"SFX"

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InvulnerableTimer" type="Timer" parent="."]

[node name="ShootPointRight" type="Marker2D" parent="."]
position = Vector2(18, -10)

[node name="ShootPointLeft" type="Marker2D" parent="."]
position = Vector2(7, -10)

[node name="FireballCooldownTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ShootAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_vjdm5")

[node name="Origin" type="Marker2D" parent="."]
position = Vector2(13, -7)

[node name="Foot" type="Marker2D" parent="."]
position = Vector2(13, 0)

[node name="Pickaxe" type="Sprite2D" parent="."]
visible = false
position = Vector2(19, -7)
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_7bpjx")

[connection signal="timeout" from="ExplodeTimer" to="." method="_on_explode_timer_timeout"]
[connection signal="timeout" from="InvulnerableTimer" to="." method="_on_invulnerable_timer_timeout"]
[connection signal="timeout" from="FireballCooldownTimer" to="." method="_on_fireball_cooldown_timer_timeout"]
